fix double scroll bars

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ body {
   background-color: transparent !important;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 html {
   overflow-x: hidden;
   margin: 0;
